# Competnecy

./: .gitignore  COMPETENCY_PIPELINE_README.md  Drama.md  PIPELINE.md  Plan.md  README.md  build_curriculum.py  build_passports.py  consolidate_peripheral.py  convert_to_md.py  dataset_top10.txt  docker-compose.yml  pyproject.toml  rank_competencies.py  requirements.txt  rerank_merge.py  run.py  run_competency_pipeline.py  validate_only.py  view_dataset_top10.py
Explore/HH/: UC_HH_1_extract_professions.py  UC_HH_2_collect_vacancies.py  extract_professions.py  hh_vacancy_tool.py  professions_to_md.py
Explore/ONET/: onet_tool.py
Explore/Reddit/: UC_REDDIT_1_collect_market_threads.py  reddit_client.py  reddit_vacancy_tool.py
Explore/TGStat/: UC_TGSTAT_1_extract_channels.py  UC_TGSTAT_2_ingest_qdrant.py  ingest_tg_vacancies_to_qdrant.py  parse_tgstat_vacancies.py
Global_services/: requirements.txt
Global_services/AI/: AI.md  Dockerfile  LLM_SERVICE.md  QDRANT.md  __init__.py  crawler_server.py  llm_asr.py  (+4 more)
competency_pipeline/: __init__.py  api.py  competency_extractor.py  competency_profile_service.py  curriculum_generation_service.py  evidence_synthesis_service.py  llm_helpers.py  pipeline_orchestrator.py  pipeline_v2.py  program_generator.py  research_ingestion_service.py  review_service.py
data/: 2026-04-23_competency_methodology.md  2026-04-23_competency_research_synthesis.md
data_md/: 2024_12_24_Лидерство_в_инженерном_образовании_Семинар_в_УРФУ_2.md  Елисеенко.md  Методологические_подходы_к_описанию_профессиональной_деятельности.md  Шаблон отчета НИР.md
(+69 files in other folders)
